# jira-for-chores

./: Cargo.toml  README.md  db.yml  docker-compose.yml
.sqlx/: query-12704c0ad99eb487005e8b29c00fc05bf60ddaab6e8ce8b4d8fa4e55d2dc31d2.json  query-42608ae524f9a303f914393eb53629813dc915d322fc67139c05de2db40aab62.json  query-b05389bed7eaca4bd33420f95bc07ec3acbaa6768fbd165b4d44540bacd9c237.json
batch/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/catalogue/: infrastructure.rs  mod.rs  service.rs  task.rs
core/src/management/application/: commands.rs  mod.rs  ports.rs  service.rs
core/src/management/models/: events.rs  mod.rs  organization.rs  task.rs
core/src/shared/: account.rs
migrations/: 20250331173545_catalogue.sql
src/: lib.rs
src/management/domain/: account.rs  events.rs  mod.rs  organization.rs  repositories.rs  task.rs
