[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
rand = "0.9.0"
serde = {version =  "1.0.219", features = ["derive"]}
sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid"]}
thiserror = "2.0.11"
ulid = {version =  "1.2.0", features = ["serde", "uuid"]}
